<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:weightSum="11">

    <TextView
        android:id="@+id/textViewMenu"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="4"
        android:text="@string/textViewMenu"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/textViewPrice"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="3"
        android:text="@string/textViewPrice"
        android:textSize="18sp" />

    <Button
        android:id="@+id/buttonIncrease"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/buttonIncrease" />

    <Button
        android:id="@+id/buttonDecrease"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/buttonDecrease" />

    <TextView
        android:id="@+id/textViewCount"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/textViewCount"
        android:textSize="18sp" />

    <Button
        android:id="@+id/buttonClear"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/buttonClear"
        android:visibility="invisible" />
</LinearLayout>